Colaboratory를 통해 생성됨

--- a/Quest01/Quest01.ipynb
+++ b/Quest01/Quest01.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNVs3NS4IlBPc8moxRnsA6A",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Hello world 를 출력하는 프로그램을 만들어주세요!"
-      ],
       "metadata": {
         "id": "Q3I9O4Pf18wQ"
-      }
+      },
+      "source": [
+        "회문 만들기"
+      ]
     },
     {
       "cell_type": "code",
@@ -43,20 +27,96 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JixDxnPI1QgY",
-        "outputId": "66f23b68-bc48-45f1-a28b-891ea1ab0cc4"
+        "outputId": "a78b10e1-a32a-4670-8316-980806d0c75d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "입력값나이트\n",
+            "뒤집힌 단어는 : 트이나\n",
+            "회문이 아닙니다.\n"
+          ]
+        }
+      ],
+      "source": [
+        "words = input(\"입력값\")\n",
+        "palin = True\n",
+        "\n",
+        "for i in range(len(words)//2) :\n",
+        "    if words[i] != words[-1 -i] :\n",
+        "        palin = False\n",
+        "        break\n",
+        "word = \"\".join(reversed(words))\n",
+        "print(\"뒤집힌 단어는 :\", word)\n",
+        "if palin == True :\n",
+        "    print(\"입력값은 회문입니다.\")\n",
+        "else :\n",
+        "\n",
+        "    print(\"회문이 아닙니다.\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "KCrwsZQQhFFZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96240acd-fb06-43b7-e012-a64749fd693c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello, world\n"
+            "입력값:\n",
+            "우영우\n",
+            "\n",
+            "출력값:\n",
+            "뒤집힌 단어는: 우영우\n",
+            "입력한 단어는 회문이 아닙니다.\n"
           ]
         }
       ],
       "source": [
-        "print('Hello, world')"
+        "words = input(\"입력값:\\n\")\n",
+        "\n",
+        "def words_check(words) :\n",
+        "  print()\n",
+        "  print(\"출력값:\")\n",
+        "  word = \"\".join(reversed(words))\n",
+        "  print(\"뒤집힌 단어는:\", word)\n",
+        "  palin == True\n",
+        "  for i in range(len(words)//2) :\n",
+        "      if words[i] != words[-1 -i] :\n",
+        "        palin == False\n",
+        "        break\n",
+        "\n",
+        "  if palin == True :\n",
+        "      print(\"입력한 단어는 회문입니다.\")\n",
+        "  else :\n",
+        "      print(\"입력한 단어는 회문이 아닙니다.\")\n",
+        "\n",
+        "words_check(words)\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
